examples/type_system/failing/183_hash_missing_colon.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/183_hash_missing_colon.flx
// error[E034]: Missing Hash Colon
//
// This hash entry needs `:` between the key and value.
//
//   examples/type_system/failing/183_hash_missing_colon.flx:20:15
//    |
// 20 | let h = { "a" 1 }
//    |               ^
//
// Hint:
//   Hash literals use `{key: value, ...}`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let h = { "a" 1 }
let after = 1
